@@ -1,3 +1,50 @@
+// package apigateway.apigateway.config;
+
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.reactive.CorsWebFilter;
+// import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+
+// import java.util.Arrays;
+
+// // @Configuration
+// // public class CorsConfig {
+
+// //     @Bean
+// //     public CorsWebFilter corsWebFilter() {
+// //         CorsConfiguration config = new CorsConfiguration();
+// //         config.setAllowCredentials(true);
+// //         config.addAllowedOriginPattern("*");  // or specific origins
+// //         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+// //         config.addAllowedHeader("*");
+
+// //         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+// //         source.registerCorsConfiguration("/**", config);
+// //         return new CorsWebFilter(source);
+// //     }
+// // }
+// @Configuration
+// public class CorsConfig {
+
+//     @Bean
+//     public CorsWebFilter corsWebFilter() {
+//         CorsConfiguration config = new CorsConfiguration();
+
+//         config.setAllowCredentials(true);
+//         config.setAllowedOrigins(Arrays.asList("http://localhost:5173")); 
+//         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+//         config.setAllowedHeaders(Arrays.asList("*"));
+//         config.setExposedHeaders(Arrays.asList("Authorization"));
+
+//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//         source.registerCorsConfiguration("/**", config);
+
+//         return new CorsWebFilter(source);
+//     }
+// }
+
+
 package apigateway.apigateway.config;
 
 import org.springframework.context.annotation.Bean;
@@ -6,7 +53,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -14,13 +61,16 @@ public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration config = new CorsConfiguration();
+
         config.setAllowCredentials(true);
-        config.addAllowedOriginPattern("*");  // or specific origins
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        config.addAllowedHeader("*");
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
         return new CorsWebFilter(source);
     }
 }
